# Poker_Game

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
Headers/: cards.h  display.h  event_types.h  events.h  events_base.h  player.h  table.h
ML_assingment_2/: ml-weather.ipynb
SF_back_up/: Untitled0.ipynb
SF_back_up/admin/: DB_functions.py  flaskApp.py
SF_back_up/static/: script.js  styles.css
SF_back_up/students/: ds_model_arcface_detector_retinaface_aligned_normalization_base_expand_0.pkl
SF_back_up/templates/: attendance.html  dashboard.html  failed.html  index.html  login.html  thanks.html
Src/: display.cpp  main.cpp
poker/: Poker.sln
poker/Poker/: Poker.vcxproj
poker/Poker/Headers/: cards.h
poker/Poker/Src/: main.cpp
